07 - Nginx Ingress/deploy-nginx-ingress2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-http-backend2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-http-backend2
  template:
    metadata:
      labels:
        app: default-http-backend2
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-http-backend2
        # Any image is permissable as long as:
        # 1. It serves a 404 page at /
        # 2. It serves 200 on a /healthz endpoint
        image: k8s.gcr.io/defaultbackend:1.0
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 256Mi
          requests:
            cpu: 10m
            memory: 128Mi
